# GifMaker

./: README.md
application/: CMakeLists.txt  main.c
application/src/: MainController.c  MainInteractor.c  MainModel.c  MainViewBuilder.c
application/src/Models/: Clock.c  GameLoop.c  LinkedList.c
application/src/gui/: Button.c
application/src/gui/includeGui/: Button.h
application/src/include/: MainController.h  MainModel.h  MainViewBuilder.h
application/src/includeSrc/: Clock.h  GameLoop.h  LinkedList.h  MainController.h  MainInteractor.h  MainModel.h  MainViewBuilder.h
application/src/interfaces/: GameRayController.c
application/src/interfaces/include/: GameRayController.h
application/src/interfaces/includeInterface/: GameRayController.h
